# screenshot-tool

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
screenshot_tool/: __init__.py  core.py
tests/: test_screenshot_tool.py
